# sloy

./: .gitignore  Dockerfile  README.md  pyproject.toml
sample/: alb_latency_5m.yaml  balance_operation_latency_7d.yaml  config.yaml  db_latency_24h.yaml  db_latency_7d.yaml  gke_error_rate_1m.yaml  nginx_error_rate_7d.yaml
src/sloy/: main.py
src/sloy/api/: compute.py  factory.py
src/sloy/backends/: cloudlogging.py  elasticsearch.py
src/sloy/exporters/: gsheets.py  slack.py
src/sloy/helpers/: config.py  time_converter.py  validate.py
